hard-gists/1233846/run.log
=== Docker Run Log for 1233846 ===
Started at: Mi 29. Okt 12:01:19 CET 2025

[2025-10-29 12:01:19] START: Running container for 1233846
[2025-10-29 12:01:20] SUCCESS: Container 0e7754fda124ed372ab5418d851e28a63694c2e5ffcb9b4458e29910005f014d started for 1233846
=== Container logs for 1233846 ===
  File "/snippet.py", line 14
    print record[0].identifier()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1233846 ===
[2025-10-29 12:01:22] INFO: Container 0e7754fda124ed372ab5418d851e28a63694c2e5ffcb9b4458e29910005f014d has stopped
